# funda_scraper

./: .gitignore  README.md  funda_scraper.py  georef-netherlands-postcode-pc4.csv  pyproject.toml  sold_properties_updater.py
